syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Events;
import "google/protobuf/timestamp.proto";

enum EventTicketClassType {
	TICKET_GENERAL_ACCESS = 0;
	TICKET_ALL_MEMBER_ACCESS = 1;
	TICKET_MEMBER_LEVEL_ACCESS = 2;
}

message TicketClassRecord {
  string TicketClassId = 1; // Unique identifier for the ticket class
  EventTicketClassType Type = 2; // Type of ticket class (general access, member level, etc.)
  string Name = 3;          // Name of the ticket class
  uint32 AmountAvailable = 4; // Number of tickets available in this class
  bool CountTowardEventMax = 5; // Whether tickets in this class count toward the event's maximum ticket limit
  uint32 MaxTicketsPerUser = 6; // Maximum number of tickets a user can purchase in this class
  bool IsTransferrable = 7; // Whether tickets in this class can be transferred to another user
  uint32 PricePerTicketCents = 8; // Price per ticket in cents
}

message EventTicketClass {
	string TicketClassId = 1;
	string EventId = 2; // ID of the event this ticket class belongs to
	TicketClassRecord Public = 3; // Public information about the ticket class
	google.protobuf.Timestamp SaleStartOnUTC = 21;
	google.protobuf.Timestamp SaleEndOnUTC = 22;
}